@@ -19,43 +19,52 @@ class CommandTest < Test::Unit::TestCase
     assert_equal "ls\\\necho", cmd.command
   end
 
-  def test_command_with_env_key_should_have_environment_constructed_and_prepended
+  def test_command_with_pty_should_request_pty_and_register_success_callback
     session = setup_for_extracting_channel_action(:on_success) do |ch|
+      ch.expects(:request_pty).with(:want_reply => true)
+      ch.expects(:exec).with(%(sh -c "ls"))
+    end
+    Capistrano::Command.new("ls", [session], :pty => true)
+  end
+
+  def test_command_with_env_key_should_have_environment_constructed_and_prepended
+    session = setup_for_extracting_channel_action do |ch|
+      ch.expects(:request_pty).never
       ch.expects(:exec).with(%(env FOO=bar sh -c "ls"))
     end
     Capistrano::Command.new("ls", [session], :env => { "FOO" => "bar" })
   end
 
   def test_env_with_symbolic_key_should_be_accepted_as_a_string
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(env FOO=bar sh -c "ls"))
     end
     Capistrano::Command.new("ls", [session], :env => { :FOO => "bar" })
   end
 
   def test_env_as_string_should_be_substituted_in_directly
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(env HOWDY=there sh -c "ls"))
     end
     Capistrano::Command.new("ls", [session], :env => "HOWDY=there")
   end
 
   def test_env_with_symbolic_value_should_be_accepted_as_string
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(env FOO=bar sh -c "ls"))
     end
     Capistrano::Command.new("ls", [session], :env => { "FOO" => :bar })
   end
 
   def test_env_value_should_be_escaped
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(env FOO=(\\ \\\"bar\\\"\\ ) sh -c "ls"))
     end
     Capistrano::Command.new("ls", [session], :env => { "FOO" => '( "bar" )' })
   end
 
   def test_env_with_multiple_keys_should_chain_the_entries_together
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with do |command|
         command =~ /^env / &&
         command =~ /\ba=b\b/ &&
@@ -73,6 +82,7 @@ class CommandTest < Test::Unit::TestCase
 
     session.expects(:open_channel).yields(channel)
     channel.expects(:[]=).with(:host, "capistrano")
+    channel.stubs(:[]).with(:host).returns("capistrano")
 
     Capistrano::Command.new("ls", [session])
   end
@@ -83,47 +93,38 @@ class CommandTest < Test::Unit::TestCase
 
     session.expects(:open_channel).yields(channel)
     channel.expects(:[]=).with(:options, {:data => "here we go"})
+    channel.stubs(:[]).with(:host).returns("capistrano")
 
     Capistrano::Command.new("ls", [session], :data => "here we go")
   end
 
-  def test_open_channel_should_request_pty
-    session = mock(:xserver => server("capistrano"))
-    channel = stub_everything
-
-    session.expects(:open_channel).yields(channel)
-    channel.expects(:request_pty).with(:want_reply => true)
-
-    Capistrano::Command.new("ls", [session])
-  end
-
   def test_successful_channel_should_send_command
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(sh -c "ls"))
     end
     Capistrano::Command.new("ls", [session])
   end
 
   def test_successful_channel_with_shell_option_should_send_command_via_specified_shell
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(/bin/bash -c "ls"))
     end
     Capistrano::Command.new("ls", [session], :shell => "/bin/bash")
   end
 
   def test_successful_channel_should_send_data_if_data_key_is_present
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(sh -c "ls"))
       ch.expects(:send_data).with("here we go")
     end
     Capistrano::Command.new("ls", [session], :data => "here we go")
   end
 
-  def test_unsuccessful_channel_should_close_channel
+  def test_unsuccessful_pty_request_should_close_channel
     session = setup_for_extracting_channel_action(:on_failure) do |ch|
       ch.expects(:close)
     end
-    Capistrano::Command.new("ls", [session])
+    Capistrano::Command.new("ls", [session], :pty => true)
   end
 
   def test_on_data_should_invoke_callback_as_stdout
@@ -258,14 +259,14 @@ class CommandTest < Test::Unit::TestCase
   end
 
   def test_process_with_host_placeholder_should_substitute_placeholder_with_each_host
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(sh -c "echo capistrano"))
     end
     Capistrano::Command.new("echo $CAPISTRANO:HOST$", [session])
   end
 
   def test_process_with_unknown_placeholder_should_not_replace_placeholder
-    session = setup_for_extracting_channel_action(:on_success) do |ch|
+    session = setup_for_extracting_channel_action do |ch|
       ch.expects(:exec).with(%(sh -c "echo \\$CAPISTRANO:OTHER\\$"))
     end
     Capistrano::Command.new("echo $CAPISTRANO:OTHER$", [session])
@@ -283,19 +284,18 @@ class CommandTest < Test::Unit::TestCase
       ch
     end
 
-    def setup_for_extracting_channel_action(action, *args)
+    def setup_for_extracting_channel_action(action=nil, *args)
       s = server("capistrano")
       session = mock("session", :xserver => s)
 
       channel = stub_everything
       session.expects(:open_channel).yields(channel)
 
-      ch = mock
-      ch.stubs(:[]).with(:server).returns(s)
-      ch.stubs(:[]).with(:host).returns(s.host)
-      channel.expects(action).yields(ch, *args)
+      channel.stubs(:[]).with(:server).returns(s)
+      channel.stubs(:[]).with(:host).returns(s.host)
+      channel.expects(action).yields(channel, *args) if action
 
-      yield ch if block_given?
+      yield channel if block_given?
 
       session
     end
